<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_4"
    android:orientation="vertical"
    tools:context=".RegistrasiActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/asap_medium"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/daftar"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="40dp"
                android:orientation="vertical">

                <!--        Full Name-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/fullname"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_bold"
                    android:textColor="@color/white" />

                <!--        Username-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/username"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_bold"
                    android:textColor="@color/white" />

                <!--Email-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/email"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_bold"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

                <!--        Password-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/pass"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_bold"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <!--        Confirm-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/confirm"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_bold"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <!--        Food Focus-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/foodFocus"
                    android:textColor="@color/white" />


                <RadioGroup
                    android:id="@+id/groupFocus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioAppetizer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-10dp"
                        android:layout_marginBottom="-15dp"
                        android:buttonTint="@color/yellow"
                        android:fontFamily="@font/asap_regular"
                        android:text="@string/appetizer"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radioMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-10dp"
                        android:layout_marginBottom="-15dp"
                        android:buttonTint="@color/yellow"
                        android:fontFamily="@font/asap_regular"
                        android:text="@string/main"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioDessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-10dp"
                        android:buttonTint="@color/yellow"
                        android:fontFamily="@font/asap_regular"
                        android:text="@string/dessert"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </RadioGroup>

                <!--                Seekbar-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/gilroy_regular"
                        android:text="@string/love"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/seekbarPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/gilroy_regular"
                        android:text="@string/persen"
                        android:textColor="@color/white" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekbarLove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="100"
                    android:progressTint="@color/white"
                    android:thumbTint="@color/yellow" />

                <!--                Checkbox-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkGudie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-10dp"
                        android:buttonTint="@color/yellow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/asap_regular"
                        android:text="@string/readGuide"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_sign_in"
                    android:fontFamily="@font/asap_bold"
                    android:text="@string/daftar"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>