<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="3dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="3dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    android:id="@+id/rcvItem">

    <TextView
        android:id="@+id/idRecipe"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/food"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/foodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/foodname"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/description"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/foodname"
            app:layout_constraintTop_toBottomOf="@+id/foodname" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/recipe"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/textRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/tools"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textTools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/steps"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textRecipe"
            app:layout_constraintTop_toBottomOf="@+id/textRecipe" />

        <TextView
            android:id="@+id/textSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>